--- a/index.html
+++ b/index.html
@@ -5,26 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilo/style.css">
     <title>Lionel Messi</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <div><img src="./images/logo.jpg" alt="Logo de la pagina" class="logo-img">
-                <h2 class="nombre-pagina">Lionel Messi</h2>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <img src="./images/logo.jpg" alt="Logo de la pagina" class="">
+              <a class="logo-messi" href="index.html">Lionel Messi</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./pages/fotos.html">Fotos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"aria-current="page" href="./pages/videos.html">Videos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./pages/biografia.html">Biografia</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <ul>
-                <li><a href="./pages/fotos.html">Fotos</a></li>
-                <li><a href="./pages/videos.html">Videos</a></li>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/biografia.html">Biografia</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a></li>
-            </ul>
-
-        </nav>
-        </div>
+          </nav>
     </header>
     <main class="areas">
         
@@ -49,6 +63,12 @@
             <a href="https://www.instagram.com"><img src="./images/logo3.jpg" alt="" class="logo-3"></a>
         </div>
     </footer>
+
+    
+  <!--scrip bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous"></script>
 
 </body>
 
