--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -67,7 +67,10 @@
             <a href="https://www.instagram.com"><img src="../images/logo3.jpg" alt="" class="logo-3"></a>
         </div>
     </footer>
-
+  <!--scrip bootstrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
