--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -5,26 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--link bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilo/style.css">
     <title>Biografia Messi</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <div><img src="../images/logo.jpg" alt="Logo de la pagina" class="logo-img">
-                <h2 class="nombre-pagina">Lionel Messi</h2>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a href="../index.html">  <img src="../images/logo.jpg"  alt="Logo de la pagina"> </a>
+              <a class="logo-messi" href="../index.html">Lionel Messi</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="fotos.html">Fotos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"aria-current="page" href="../pages/videos.html">Videos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../pages/biografia.html">Biografia</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <ul>
-                <li><a href="fotos.html">Fotos</a></li>
-                <li><a href="videos.html">Videos</a></li>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="biografia.html">Biografia</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-            </ul>
-
-        </nav>
-        </div>
+          </nav>
     </header>
     <main class="fondo-bio">
         <div class="biografia"></div>
@@ -48,10 +62,7 @@
                 ininterrumpida fue la temporada 2008-09, en la que el Barcelona alcanzó el primer triplete del fútbol
                 español.
                 En 2009, a los veintidós años, ganó su primer Balón de Oro y el premio al Jugador Mundial de la FIFA del
-                año. Siguieron tres temporadas exitosas, en las que ganó cuatro Balones de Oro de forma consecutiva,
-                hecho que no tenía precedentes. Hasta el momento, su mejor campaña personal es la temporada 2011-12, en
-                la que estableció el récord de más goles en una temporada, tanto en La Liga como en otras competiciones
-                europeas.</p>
+                año.</p>
         </div>
 
 
