--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <img src="./images/logo.jpg" alt="Logo de la pagina" class="">
+                <a href="index.html">  <img src="./images/logo.jpg"  alt="Logo de la pagina"> </a>
               <a class="logo-messi" href="index.html">Lionel Messi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
