--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -17,24 +17,24 @@
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <img src="../images/logo.jpg" alt="Logo de la pagina" class="">
-              <a class="logo-messi" href="index.html">Lionel Messi</a>
+                <a href="../index.html">  <img src="../images/logo.jpg"  alt="Logo de la pagina"> </a>
+              <a class="logo-messi" href="../index.html">Lionel Messi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./pages/fotos.html">Fotos</a>
+                    <a class="nav-link" aria-current="page" href="fotos.html">Fotos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"aria-current="page" href="./pages/videos.html">Videos</a>
+                    <a class="nav-link"aria-current="page" href="../pages/videos.html">Videos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./pages/biografia.html">Biografia</a>
+                    <a class="nav-link" aria-current="page" href="../pages/biografia.html">Biografia</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
+                    <a class="nav-link" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
                   </li>
                 </ul>
               </div>
@@ -91,7 +91,10 @@
             <a href="https://www.instagram.com"><img src="../images/logo3.jpg" alt="" class="logo-3"></a>
         </div>
     </footer>
-
+ <!--scrip bootstrap-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+ crossorigin="anonymous"></script>
 </body>
 
 </html>
