--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,59 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./estilo/style.css">
     <link rel="stylesheet" href="../estilo/style.css">
     <title>Videos Messi</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <div><img src="../images/logo.jpg" alt="Logo de la pagina" class="logo-img">
-                <h2 class="nombre-pagina">Lionel Messi</h2>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a href="../index.html">  <img src="../images/logo.jpg"  alt="Logo de la pagina"> </a>
+              <a class="logo-messi" href="../index.html">Lionel Messi</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../pages/fotos.html">Fotos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link"aria-current="page" href="videos.html">Videos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../pages/biografia.html">Biografia</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <ul>
-                <li><a href="fotos.html">Fotos</a></li>
-                <li><a href="videos.html">Videos</a></li>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="biografia.html">Biografia</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-            </ul>
-
-        </nav>
-        </div>
+          </nav>
     </header>
     <main>
-        <div class="galeria">
-            <div >
-                <h3>Records de goles</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/WpGyvkmWiLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
 
+                <iframe width="560" height="850" src="https://www.youtube.com/embed/J5AE3dWsPkk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="d-block w-100"> </iframe>
+                
+              </div>
+              <div class="carousel-item">
+                <iframe width="560" height="850" src="https://www.youtube.com/embed/INNfz_VUHZk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="d-block w-100" ></iframe>
+              </div>
+              <div class="carousel-item">
+                <iframe width="560" height="850" src="https://www.youtube.com/embed/p693u53Q10U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="d-block w-100"></iframe>
+              </div>
             </div>
-            <div>
-                <h3>Gol historico</h3>
-                <iframe width="492" height="615" src="https://www.youtube.com/embed/3_LpXRira9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
-            <div>
-                <h3>Gol con la mano</h3>
-                <iframe width="492" height="615" src="https://www.youtube.com/embed/rbd0pPr_DdQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
-            <div class="foga">
-                <h3>Record Argentina</h3>
-                <iframe width="492" height="615" src="https://www.youtube.com/embed/IF0MLBBX0cU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
-            <div class="foga">
-                <h3>Argentina campeon</h3>
-                <iframe width="492" height="615" src="https://www.youtube.com/embed/SX5PQVYseJ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div>
-                <h3>Campeon Finalissima</h3>
-                <iframe width="492" height="615" src="https://www.youtube.com/embed/jqf7fVjjANE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-
-        </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </main>
     <!--Pie de pagina-->
     <footer class="pie-pagina">
@@ -70,7 +77,10 @@
             <a href="https://www.instagram.com"><img src="../images/logo3.jpg" alt="" class="logo-3"></a>
         </div>
     </footer>
-
+ <!--scrip bootstrap-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+ crossorigin="anonymous"></script>
 </body>
 
 </html>
